# zonefile-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  zones.toml  zones.yaml
src/: args.rs  constants.rs  lib.rs  main.rs  parser.rs  record.rs  serial.rs  transform.rs  validation.rs
src/output/: mod.rs  nsd.rs  unbound.rs
tests/: integration_test.rs
